# mdpolars_py

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml
mdpolars/: __init__.py  utils.py
tests/: test_utils.py
tests/fixtures/: numeric_pattern.csv
