[tool.poetry]
name = "mdpolars"
version = "0.1.0"
description = "a simpler tool for convert markdown table to polars"
authors = ["kyoto7250 <50972773+kyoto7250@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kyoto7250/mdpolars_py"
repository = "https://github.com/kyoto7250/mdpolars_py"
keywords = ["polars", "markdown", "table", "test", "development"]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.19.8"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
ruff = "^0.0.292"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
